feat: many, many updates